src/condition-parser.js
// @generated by Peggy 5.0.6.
//
// https://peggyjs.org/


class peg$SyntaxError extends SyntaxError {
  constructor(message, expected, found, location) {
    super(message);
    this.expected = expected;
    this.found = found;
    this.location = location;
    this.name = "SyntaxError";
  }

  format(sources) {
    let str = "Error: " + this.message;
    if (this.location) {
      let src = null;
      const st = sources.find(s => s.source === this.location.source);
      if (st) {
        src = st.text.split(/\r\n|\n|\r/g);
      }
      const s = this.location.start;
      const offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
        ? this.location.source.offset(s)
        : s;
      const loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
      if (src) {
        const e = this.location.end;
        const filler = "".padEnd(offset_s.line.toString().length, " ");
        const line = src[s.line - 1];
        const last = s.line === e.line ? e.column : line.length + 1;
        const hatLen = (last - s.column) || 1;
        str += "\n --> " + loc + "\n"
            + filler + " |\n"
            + offset_s.line + " | " + line + "\n"
            + filler + " | " + "".padEnd(s.column - 1, " ")
            + "".padEnd(hatLen, "^");
      } else {
        str += "\n at " + loc;
      }
    }
    return str;
  }

  static buildMessage(expected, found) {
    function hex(ch) {
      return ch.codePointAt(0).toString(16).toUpperCase();
    }

    const nonPrintable = Object.prototype.hasOwnProperty.call(RegExp.prototype, "unicode")
      ? new RegExp("[\\p{C}\\p{Mn}\\p{Mc}]", "gu")
      : null;
    function unicodeEscape(s) {
      if (nonPrintable) {
        return s.replace(nonPrintable,  ch => "\\u{" + hex(ch) + "}");
      }
      return s;
    }

    function literalEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/"/g,  "\\\"")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    function classEscape(s) {
      return unicodeEscape(s
        .replace(/\\/g, "\\\\")
        .replace(/\]/g, "\\]")
        .replace(/\^/g, "\\^")
        .replace(/-/g,  "\\-")
        .replace(/\0/g, "\\0")
        .replace(/\t/g, "\\t")
        .replace(/\n/g, "\\n")
        .replace(/\r/g, "\\r")
        .replace(/[\x00-\x0F]/g,          ch => "\\x0" + hex(ch))
        .replace(/[\x10-\x1F\x7F-\x9F]/g, ch => "\\x"  + hex(ch)));
    }

    const DESCRIBE_EXPECTATION_FNS = {
      literal(expectation) {
        return "\"" + literalEscape(expectation.text) + "\"";
      },

      class(expectation) {
        const escapedParts = expectation.parts.map(
          part => (Array.isArray(part)
            ? classEscape(part[0]) + "-" + classEscape(part[1])
            : classEscape(part))
        );

        return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]" + (expectation.unicode ? "u" : "");
      },

      any() {
        return "any character";
      },

      end() {
        return "end of input";
      },

      other(expectation) {
        return expectation.description;
      },
    };

    function describeExpectation(expectation) {
      return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
    }

    function describeExpected(expected) {
      const descriptions = expected.map(describeExpectation);
      descriptions.sort();

      if (descriptions.length > 0) {
        let j = 1;
        for (let i = 1; i < descriptions.length; i++) {
          if (descriptions[i - 1] !== descriptions[i]) {
            descriptions[j] = descriptions[i];
            j++;
          }
        }
        descriptions.length = j;
      }

      switch (descriptions.length) {
        case 1:
          return descriptions[0];

        case 2:
          return descriptions[0] + " or " + descriptions[1];

        default:
          return descriptions.slice(0, -1).join(", ")
            + ", or "
            + descriptions[descriptions.length - 1];
      }
    }

    function describeFound(found) {
      return found ? "\"" + literalEscape(found) + "\"" : "end of input";
    }

    return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
  }
}

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  const peg$FAILED = {};
  const peg$source = options.grammarSource;

  const peg$startRuleFunctions = {
    Condition: peg$parseCondition,
  };
  let peg$startRuleFunction = peg$parseCondition;

  const peg$c0 = "or";
  const peg$c1 = "and";
  const peg$c2 = "not";
  const peg$c3 = "is not";
  const peg$c4 = "defined";
  const peg$c5 = "is";
  const peg$c6 = "not contains";
  const peg$c7 = "contains";
  const peg$c8 = "not in";
  const peg$c9 = "in";
  const peg$c10 = "==";
  const peg$c11 = "!=";
  const peg$c12 = "<=";
  const peg$c13 = ">=";
  const peg$c14 = "<";
  const peg$c15 = ">";
  const peg$c16 = "match";
  const peg$c17 = "regex";
  const peg$c18 = "search";
  const peg$c19 = "<<";
  const peg$c20 = "(";
  const peg$c21 = ")";
  const peg$c22 = "selectattr";
  const peg$c23 = "select";
  const peg$c24 = ",";
  const peg$c25 = "=";
  const peg$c26 = "[";
  const peg$c27 = "]";
  const peg$c28 = "events";
  const peg$c29 = "event";
  const peg$c30 = "facts";
  const peg$c31 = "fact";
  const peg$c32 = "vars";
  const peg$c33 = ".";
  const peg$c34 = "true";
  const peg$c35 = "false";
  const peg$c36 = "null";
  const peg$c37 = "'";
  const peg$c38 = "\"";

  const peg$r0 = /^[+\-]/;
  const peg$r1 = /^[*\/]/;
  const peg$r2 = /^[0-9]/;
  const peg$r3 = /^[eE]/;
  const peg$r4 = /^[^']/;
  const peg$r5 = /^[^"]/;
  const peg$r6 = /^[a-zA-Z_]/;
  const peg$r7 = /^[a-zA-Z0-9_]/;
  const peg$r8 = /^[ \t\n\r]/;

  const peg$e0 = peg$literalExpectation("or", true);
  const peg$e1 = peg$literalExpectation("and", true);
  const peg$e2 = peg$literalExpectation("not", true);
  const peg$e3 = peg$literalExpectation("is not", true);
  const peg$e4 = peg$literalExpectation("defined", true);
  const peg$e5 = peg$literalExpectation("is", true);
  const peg$e6 = peg$literalExpectation("not contains", true);
  const peg$e7 = peg$literalExpectation("contains", true);
  const peg$e8 = peg$literalExpectation("not in", true);
  const peg$e9 = peg$literalExpectation("in", true);
  const peg$e10 = peg$literalExpectation("==", false);
  const peg$e11 = peg$literalExpectation("!=", false);
  const peg$e12 = peg$literalExpectation("<=", false);
  const peg$e13 = peg$literalExpectation(">=", false);
  const peg$e14 = peg$literalExpectation("<", false);
  const peg$e15 = peg$literalExpectation(">", false);
  const peg$e16 = peg$literalExpectation("match", true);
  const peg$e17 = peg$literalExpectation("regex", true);
  const peg$e18 = peg$literalExpectation("search", true);
  const peg$e19 = peg$literalExpectation("<<", false);
  const peg$e20 = peg$classExpectation(["+", "-"], false, false, false);
  const peg$e21 = peg$classExpectation(["*", "/"], false, false, false);
  const peg$e22 = peg$literalExpectation("(", false);
  const peg$e23 = peg$literalExpectation(")", false);
  const peg$e24 = peg$literalExpectation("selectattr", false);
  const peg$e25 = peg$literalExpectation("select", false);
  const peg$e26 = peg$literalExpectation(",", false);
  const peg$e27 = peg$literalExpectation("=", false);
  const peg$e28 = peg$literalExpectation("[", false);
  const peg$e29 = peg$literalExpectation("]", false);
  const peg$e30 = peg$literalExpectation("events", false);
  const peg$e31 = peg$literalExpectation("event", false);
  const peg$e32 = peg$literalExpectation("facts", false);
  const peg$e33 = peg$literalExpectation("fact", false);
  const peg$e34 = peg$literalExpectation("vars", false);
  const peg$e35 = peg$literalExpectation(".", false);
  const peg$e36 = peg$otherExpectation("number");
  const peg$e37 = peg$otherExpectation("integer");
  const peg$e38 = peg$classExpectation([["0", "9"]], false, false, false);
  const peg$e39 = peg$otherExpectation("float");
  const peg$e40 = peg$classExpectation(["e", "E"], false, false, false);
  const peg$e41 = peg$otherExpectation("boolean");
  const peg$e42 = peg$literalExpectation("true", true);
  const peg$e43 = peg$literalExpectation("false", true);
  const peg$e44 = peg$otherExpectation("null");
  const peg$e45 = peg$literalExpectation("null", true);
  const peg$e46 = peg$otherExpectation("string");
  const peg$e47 = peg$literalExpectation("'", false);
  const peg$e48 = peg$classExpectation(["'"], true, false, false);
  const peg$e49 = peg$literalExpectation("\"", false);
  const peg$e50 = peg$classExpectation(["\""], true, false, false);
  const peg$e51 = peg$otherExpectation("identifier");
  const peg$e52 = peg$classExpectation([["a", "z"], ["A", "Z"], "_"], false, false, false);
  const peg$e53 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_"], false, false, false);
  const peg$e54 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false, false);
  const peg$e55 = peg$otherExpectation("required whitespace");

  function peg$f0(expr) {    return makeCondition(expr);  }
  function peg$f1(left, right) {    return makeOperatorExpression(left, 'or', right);  }
  function peg$f2(left, right) {    return makeOperatorExpression(left, 'and', right);  }
  function peg$f3(expr) {    return makeNegateExpression('not', expr);  }
  function peg$f4(left, op) {
    return makeOperatorExpression(left, 'is not defined', makeString('defined'));
  }
  function peg$f5(left, op) {
    return makeOperatorExpression(left, 'is defined', makeString('defined'));
  }
  function peg$f6(left, op, right) {
    return makeOperatorExpression(left, op, right);
  }
  function peg$f7() {    return 'not contains';  }
  function peg$f8() {    return 'contains';  }
  function peg$f9() {    return 'not in';  }
  function peg$f10() {    return 'in';  }
  function peg$f11(kind, search) {
    return makeOperatorExpression('is not', kind, search);
  }
  function peg$f12() {    return 'is not';  }
  function peg$f13(kind, search) {
    return makeOperatorExpression('is', kind, search);
  }
  function peg$f14() {    return 'is';  }
  function peg$f15() {    return '==';  }
  function peg$f16() {    return '!=';  }
  function peg$f17() {    return '<=';  }
  function peg$f18() {    return '>=';  }
  function peg$f19() {    return '<';  }
  function peg$f20() {    return '>';  }
  function peg$f21() {    return 'match';  }
  function peg$f22() {    return 'regex';  }
  function peg$f23() {    return 'search';  }
  function peg$f24(left, right) {
    return makeOperatorExpression(left, '<<', right);
  }
  function peg$f25(left, op, right) {
    return makeOperatorExpression(left, op, right);
  }
  function peg$f26(left, op, right) {
    return makeOperatorExpression(left, op, right);
  }
  function peg$f27(expr) {    return expr;  }
  function peg$f28(args) {
    if (args.length < 3) {
      error('selectattr requires at least 3 arguments: key, operator, value');
    }
    return makeSelectattrType(args[0], args[1], args[2]);
  }
  function peg$f29(args) {
    if (args.length < 2) {
      error('select requires at least 2 arguments: operator, value');
    }
    return makeSelectType(args[0], args[1]);
  }
  function peg$f30(kind, args) {
    if (!args || args.length === 0) {
      error(kind + ' requires at least a pattern argument');
    }
    const pattern = args[0];
    const options = [];
    // Process keyword arguments
    for (let i = 1; i < args.length; i++) {
      if (args[i].type === 'KeywordValue') {
        options.push(args[i]);
      }
    }
    return makeSearchType(kind, pattern, options);
  }
  function peg$f31(head, tail) {
    return [head].concat(tail.map(t => t[3]));
  }
  function peg$f32(name, value) {
    return makeKeywordValue(makeString(name), value);
  }
  function peg$f33(values) {
    return values || [];
  }
  function peg$f34(head, tail) {
    return [head].concat(tail.map(t => t[3]));
  }
  function peg$f35(prefix, accessor) {
    return makeIdentifier(prefix + accessor.join(''));
  }
  function peg$f36() {    return 'events';  }
  function peg$f37() {    return 'event';  }
  function peg$f38() {    return 'facts';  }
  function peg$f39() {    return 'fact';  }
  function peg$f40() {    return 'vars';  }
  function peg$f41(id) {    return '.' + id;  }
  function peg$f42(index) {
    if (typeof index === 'object' && index.type === 'String') {
      return '["' + index.value + '"]';
    } else if (typeof index === 'object' && index.type === 'Integer') {
      return '[' + index.value + ']';
    }
    return '[' + index + ']';
  }
  function peg$f43() {    return makeInteger(text());  }
  function peg$f44() {    return makeFloat(text());  }
  function peg$f45() {    return makeFloat(text());  }
  function peg$f46() {    return makeBoolean(text());  }
  function peg$f47() {    return makeNull();  }
  function peg$f48(chars) {    return makeString(chars.join(''));  }
  function peg$f49(chars) {    return makeString(chars.join(''));  }
  function peg$f50() {    return text();  }
  let peg$currPos = options.peg$currPos | 0;
  let peg$savedPos = peg$currPos;
  const peg$posDetailsCache = [{ line: 1, column: 1 }];
  let peg$maxFailPos = peg$currPos;
  let peg$maxFailExpected = options.peg$maxFailExpected || [];
  let peg$silentFails = options.peg$silentFails | 0;

  let peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos,
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$getUnicode(pos = peg$currPos) {
    const cp = input.codePointAt(pos);
    if (cp === undefined) {
      return "";
    }
    return String.fromCodePoint(cp);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text, ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase, unicode) {
    return { type: "class", parts, inverted, ignoreCase, unicode };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description };
  }

  function peg$computePosDetails(pos) {
    let details = peg$posDetailsCache[pos];
    let p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column,
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    const startPosDetails = peg$computePosDetails(startPos);
    const endPosDetails = peg$computePosDetails(endPos);

    const res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column,
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column,
      },
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseCondition() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseOrExpression();
    if (s2 !== peg$FAILED) {
      s3 = peg$parse_();
      peg$savedPos = s0;
      s0 = peg$f0(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseOrExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseAndExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = input.substr(peg$currPos, 2);
      if (s3.toLowerCase() === peg$c0) {
        peg$currPos += (2);
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseOrExpression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f1(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseAndExpression();
    }

    return s0;
  }

  function peg$parseAndExpression() {
    let s0, s1, s2, s3, s4, s5;

    s0 = peg$currPos;
    s1 = peg$parseNotExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = input.substr(peg$currPos, 3);
      if (s3.toLowerCase() === peg$c1) {
        peg$currPos += (3);
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parse_();
        s5 = peg$parseAndExpression();
        if (s5 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f2(s1, s5);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseNotExpression();
    }

    return s0;
  }

  function peg$parseNotExpression() {
    let s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = input.substr(peg$currPos, 3);
    if (s1.toLowerCase() === peg$c2) {
      peg$currPos += (3);
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$parseNotExpression();
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f3(s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$parseComparisonExpression();
    }

    return s0;
  }

  function peg$parseComparisonExpression() {
    let s0, s1, s2, s3, s4, s5, s6;

    s0 = peg$currPos;
    s1 = peg$parseShiftExpression();
    if (s1 !== peg$FAILED) {
      s2 = peg$parse_();
      s3 = peg$currPos;
      s4 = input.substr(peg$currPos, 6);
      if (s4.toLowerCase() === peg$c3) {
        peg$currPos += (6);
      } else {
        s4 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e3); }
      }
      if (s4 !== peg$FAILED) {
        s5 = peg$parse__();
        if (s5 !== peg$FAILED) {
          s6 = input.substr(peg$currPos, 7);
          if (s6.toLowerCase() === peg$c4) {
            peg$currPos += (7);
          } else {
            s6 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e4); }
          }
          if (s6 !== peg$FAILED) {
            s4 = [s4, s5, s6];
            s3 = s4;
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
      } else {
        peg$currPos = s3;
        s3 = peg$FAILED;
      }
      if (s3 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s1, s3);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseShiftExpression();
      if (s1 !== peg$FAILED) {
        s2 = peg$parse_();
        s3 = peg$currPos;
        s4 = input.substr(peg$currPos, 2);
        if (s4.toLowerCase() === peg$c5) {
          peg$currPos += (2);
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e5); }
        }
        if (s4 !== peg$FAILED) {
          s5 = peg$parse__();
          if (s5 !== peg$FAILED) {
            s6 = input.substr(peg$currPos, 7);
            if (s6.toLowerCase() === peg$c4) {
              peg$currPos += (7);
            } else {
              s6 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e4); }
            }
            if (s6 !== peg$FAILED) {
              s4 = [s4, s5, s6];
              s3 = s4;
            } else {
              peg$currPos = s3;
              s3 = peg$FAILED;
            }
          } else {
            peg$currPos = s3;
            s3 = peg$FAILED;
          }
        } else {
          peg$currPos = s3;
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s1, s3);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseShiftExpression();
        if (s1 !== peg$FAILED) {
          s2 = peg$parse_();
          s3 = peg$parseComparisonOperator();
          if (s3 !== peg$FAILED) {
            s4 = peg$parse_();
            s5 = peg$parseShiftExpression();
            if (s5 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f6(s1, s3, s5);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$parseShiftExpression();
        }
      }
    }

    return s0;
  }

  function peg$parseComparisonOperator() {
    let s0, s1, s2, s3, s4, s5;
